# Telenex-Robotics-Assignments

./: README.md
Pub-Sub/: README.md
ROS2 Messages/: README.md
ROS2 Services/: README.md
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: ObjectDetection.msg
src/custom_interfaces/srv/: GraspingEvaluation.srv
src/my_pkg/: package.xml  setup.py
src/my_pkg/my_pkg/: fleet_manager.py  object_detection_publisher.py  object_detection_subscriber.py  robot_node.py
src1/custom_interfaces/msg/: Telemetry.msg
src1/custom_interfaces/srv/: TaskDistribution.srv
src1/my_pkg/: package.xml
src4/custom_interfaces/: CMakeLists.txt  package.xml
src4/custom_interfaces/srv/: HarvestScheduling.srv
src4/my_pkg/: package.xml  setup.py
src4/my_pkg/my_pkg/: harvest_client.py  harvest_server.py
src5/custom_interfaces/: CMakeLists.txt  package.xml
src5/custom_interfaces/srv/: RobotTaskService.srv
src5/my_pkg/: package.xml  setup.py
src5/my_pkg/my_pkg/: task_client.py  task_server.py
